--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,14 @@
     "lib": [
       "es2020",
       "dom"
+    ],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types"
     ]
+  },
+  "ts-node": {
+    "files": true
   },
   "include": [
     "src/**/*.ts"
