--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "test:e2e": "jest tests/e2e",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:manual": "ts-node src/scripts/testRunner.ts",
-    "frontend:install": "npm install --prefix frontend",
-    "frontend:build": "npm run build --prefix frontend"
+    "test:manual": "ts-node src/scripts/testRunner.ts"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
