--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test:manual": "ts-node src/scripts/testRunner.ts"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@types/node": "^25.1.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.2",
     "cookie-parser": "^1.4.7",
