--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "node scripts/build.js",
     "start": "node dist/src/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "front": "tsc -p public/ts/tsconfig.json --watch",
     "test": "jest",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
